syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.DS.gerryproject.SmartFarmingGRPC";
option java_outer_classname = "SprinklerServiceImpl";

package SmartFarmingGRPC;

service SprinklerService {
  rpc initialAppliance(Empty) returns (sprinklerResponse) {}
  
  rpc changeIntensity(valueRequest) returns (stream valueResponse) {}
  
  rpc changeRange(valueRequest) returns (stream valueResponse) {}
  
  rpc onOff(booleanRequest) returns (booleanResponse) {}
  
  rpc changeApplianceName(stringRequest) returns (stringResponse) {}	

}

message Empty {

}

message stringRequest {
	string text = 1;
}

message stringResponse {
	string text = 1;
}

message booleanRequest {
	bool msg = 2;
}

message booleanResponse {
	bool msg = 2;
}

message valueRequest {
  int32 length = 3;
}

message valueResponse {
  int32 length = 3;
}

message sprinklerResponse {
	string aname = 4;
	string status = 5;
	int32 intensity = 6;
	int32 range = 7;
}
